角色未分配权限时资源访问异常bug处理